--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,5 @@ rvm:
   - "1.9.2"
 notifications:
   email: christian@media.berkeley.edu
+before_script:
+  - psql -c 'create database eggshell;' -U postgres
