--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 rvm:
   - "1.9.3"
   - "1.9.2"
+bundler_args: --without custom
 before_script:
   - psql -c 'create database eggshell_test;' -U postgres
